# mcp_customersuccess

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  docker-compose.yml  init-db.sql  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: API_KEY_SETUP.md  DEPLOYMENT.md  DOCKER_TROUBLESHOOTING.md  IMPLEMENTATION_SUMMARY.md  POSTGRESQL_MIGRATION.md  POSTGRESQL_QUICKSTART.md  POSTGRESQL_TOOLS.md  POSTGRESQL_TO_BIGQUERY_MIGRATION.md  QUICKSTART_DEPLOY.md  QUICKSTART_REGISTRATION.md  REGISTRATION_IMPLEMENTATION.md  TESTING_WITH_CLAUDE.md  USER_REGISTRATION_SETUP.md
migrations/: migrate_to_postgresql.py  setup_cloud_sql.py  setup_cloudsql.sh
src/: __init__.py  api_key_service.py  auth.py  config.py  crm_service.py  db_service.py  email_service.py  mcp_storage.py  models.py  oauth_service.py  server.py  slack_service.py  storage.py  user_service.py
src/tests/: test_api_keys.py  test_cloud_api_key.py  test_cloud_deployment.py  test_database.py  test_mcp_client.py  test_tools.py
src/utilities/: bootstrap_admin_key.py
